--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,9 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-docstring-first
-    -   id: check-json
     -   id: check-yaml
     -   id: debug-statements
     -   id: name-tests-test
-    -   id: requirements-txt-fixer
     -   id: double-quote-string-fixer
 -   repo: https://github.com/PyCQA/flake8
     rev: 4.0.1
@@ -20,10 +18,6 @@ repos:
     rev: v1.5.7
     hooks:
     -   id: autopep8
--   repo: https://github.com/pre-commit/pre-commit
-    rev: v2.16.0
-    hooks:
-    -   id: validate_manifest
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.29.1
     hooks:
@@ -39,22 +33,24 @@ repos:
     hooks:
     -   id: add-trailing-comma
         args: [--py36-plus]
--   repo: https://github.com/asottile/setup-cfg-fmt
-    rev: v1.20.0
-    hooks:
-    -   id: setup-cfg-fmt
 -   repo: https://github.com/pre-commit/mirrors-mypy
     rev: v0.920
     hooks:
     -   id: mypy
         additional_dependencies: [types-all]
-        exclude: ^testing/resources/
--   repo: meta
-    hooks:
-    -   id: check-hooks-apply
-    -   id: check-useless-excludes
-
 -   repo: https://github.com/commitizen-tools/commitizen
     rev: v2.20.3
     hooks:
     - id: commitizen
+      stages: [commit-msg]
+-   repo: https://github.com/jazzband/pip-tools
+    rev: 5.3.1
+    hooks:
+      - id: pip-compile
+        name: pip-compile requirements.in
+        args: [requirements.in]
+        files: ^requirements\.(in|txt)$
+      - id: pip-compile
+        name: pip-compile dev-requirements.in
+        args: [dev-requirements.in]
+        files: ^dev-requirements\.(in|txt)$
